# university_studies

./: README.md
c_exercises/: m2.c  pipes.c  pointers.c  signals.c  soma.c  strings.c
java_exercises/: .gitignore  README.md
java_exercises/Bibliotecas/src/: Antigo.java  Biblioteca.java  Livro.java  Main.java  Novo.java
java_exercises/BlackJack/: classes
java_exercises/BlackJack/src/: Cores.java  Dado.java  Dice.java  Game.java  Jogador.java  Jogo.java  Player.java  Principal.java  Teclado.java
java_exercises/If_and_else_exercises/src/: Aluno.java  PrincipalAluno.java
java_exercises/RandomTests/src/: Main.java
java_exercises/TelesenaSorteio/src/: ControleTeleSena.java  Main.java  Pessoa.java  Principal.java  TeleSena.java
java_exercises/TrabalhoGB/src/: Data.java  NaoPerecivel.java  Perecivel.java  Principal.java  Produto.java
java_exercises/abstract_classes/src/: Animal.java  Main.java  Vaca.java
java_exercises/arrays_exercises/src/: Exercises.java  Main.java
java_exercises/classes_practice/src/: Carro.java  Placa.java  Principal.java
java_exercises/exceptions_exercises/src/: Carro.java  Main.java  TanqueCheioException.java  TanqueInsuficienteException.java  TanqueVazioException.java
java_exercises/exercises_one/src/: Cliente.java  Livro.java  PrincipalExercisesOne.java
java_exercises/exercises_two/src/: Data.java  Mercado.java  Prateleira.java  (+3 more)
python_exercises/: .pre-commit-config.yaml  condition_exercises_part_one.py  condition_exercises_part_two.py  first_class_exercises.py  first_test.py  pyproject.toml  todos  while_loops_exercises.py
(+44 files in other folders)
