[tool.poetry]
name = "python-exercises"
version = "0.1.0"
description = ""
authors = ["Jaw <tuyweber@gmail.com>"]
readme = "README.md"
packages = [{include = "python_exercises"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
